--- a/plugins/converter/CMakeLists.txt
+++ b/plugins/converter/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-include_directories( ${CMAKE_SOURCE_DIR}/libs ${CMAKE_CURRENT_BINARY_DIR} ${KDE4_INCLUDE_DIR} ${QT_INCLUDES}  )
+include_directories( ${CMAKE_SOURCE_DIR}/libs ${CMAKE_CURRENT_BINARY_DIR}    )
 
 
 ########### next target ###############
@@ -25,9 +25,9 @@ set(kmuddyconverterplugin_PART_SRCS
     cvartrigger.cpp
     )
 
-kde4_add_plugin(kmuddyconverterplugin ${kmuddyconverterplugin_PART_SRCS})
+add_library(kmuddyconverterplugin MODULE ${kmuddyconverterplugin_PART_SRCS})
 
-target_link_libraries(kmuddyconverterplugin  ${KDE4_KDECORE_LIBS} ${KDE4_KPARTS_LIBS} ${KDE4_KDEUI_LIBS} kmuddycore )
+target_link_libraries(kmuddyconverterplugin  KF5::KDELibs4Support KF5::Parts  kmuddycore )
 
 install(TARGETS kmuddyconverterplugin DESTINATION ${PLUGIN_INSTALL_DIR} )
 
