--- a/plugins/scripting/CMakeLists.txt
+++ b/plugins/scripting/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-include_directories( ${CMAKE_SOURCE_DIR}/libs ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
+include_directories( ${CMAKE_SOURCE_DIR}/libs   ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
 
 
 ########### next target ###############
@@ -16,9 +16,9 @@ set(kmuddyscriptingplugin_PART_SRCS
    dlgrunninglist.cpp 
    )
 
-kde4_add_plugin(kmuddyscriptingplugin ${kmuddyscriptingplugin_PART_SRCS})
+add_library(kmuddyscriptingplugin MODULE ${kmuddyscriptingplugin_PART_SRCS})
 
-target_link_libraries(kmuddyscriptingplugin ${KDE4_KDECORE_LIBS} ${KDE4_KPARTS_LIBS} ${KDE4_KDEUI_LIBS} kmuddycore )
+target_link_libraries(kmuddyscriptingplugin KF5::KDELibs4Support KF5::Parts kmuddycore )
 
 install(TARGETS kmuddyscriptingplugin DESTINATION ${PLUGIN_INSTALL_DIR} )
 
