--- a/plugins/vartrigs/CMakeLists.txt
+++ b/plugins/vartrigs/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-include_directories( ${CMAKE_SOURCE_DIR}/libs ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
+include_directories( ${CMAKE_SOURCE_DIR}/libs   ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
 
 
 ########### next target ###############
@@ -11,9 +11,9 @@ set(kmuddyvartrigplugin_PART_SRCS
    cvartriggereditor.cpp
    )
 
-kde4_add_plugin(kmuddyvartrigplugin ${kmuddyvartrigplugin_PART_SRCS})
+add_library(kmuddyvartrigplugin MODULE ${kmuddyvartrigplugin_PART_SRCS})
 
-target_link_libraries(kmuddyvartrigplugin ${KDE4_KDECORE_LIBS} ${KDE4_KPARTS_LIBS} ${KDE4_KDEUI_LIBS} kmuddycore )
+target_link_libraries(kmuddyvartrigplugin KF5::KDELibs4Support KF5::Parts  kmuddycore )
 
 install(TARGETS kmuddyvartrigplugin DESTINATION ${PLUGIN_INSTALL_DIR} )
 
