--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ include(FeatureSummary)
 include(KDEFrameworkCompilerSettings)
 include(ECMInstallIcons)
 
-find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets Script)
-find_package(KF5 REQUIRED COMPONENTS Config CoreAddons I18n KIO KDELibs4Support XmlGui Parts Service)
+find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets Script Multimedia)
+find_package(KF5 REQUIRED COMPONENTS Config CoreAddons WidgetsAddons I18n KIO KDELibs4Support KCMUtils XmlGui Parts Service)
 
 find_package(MXP)
 if (MXP_FOUND)
