--- a/kmuddy/CMakeLists.txt
+++ b/kmuddy/CMakeLists.txt
@@ -50,7 +50,7 @@ set(kmuddy_SRCS
 
 add_executable(kmuddy ${kmuddy_SRCS})
 
-set (KMUDDY_LIBRARIES kmuddycore dialogs KF5::KDELibs4Support KF5::I18n KF5::Parts z )
+set (KMUDDY_LIBRARIES kmuddycore dialogs KF5::KDELibs4Support KF5::I18n KF5::Parts KF5::IconThemes z )
 if (MXP_FOUND)
   set (KMUDDY_LIBRARIES ${KMUDDY_LIBRARIES} ${MXP_LIBRARIES})
 endif (MXP_FOUND)
