Fix the kmuddy desktop file for Qt5
According the porting guide, remove the not supported %i
and change the option for the title.

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -22,7 +22,7 @@ Name[tr]=KMuddy
 Name[uk]=KMuddy
 Name[x-test]=xxKMuddyxx
 Type=Application
-Exec=kmuddy -caption %c %i
+Exec=kmuddy -qwindowtitle %c
 Icon=kmuddy
 DocPath=kmuddy/index.html
 GenericName=MUD client
