--- a/scripting/CMakeLists.txt
+++ b/scripting/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ########### install files ###############
 
-install( FILES  kmuddy-usock-client.pl kmuddy-usock-test.pl kmuddyvars.h locktest.c pre.c README testserver.cpp tmpserver.pl vartest.c DESTINATION ${DATA_INSTALL_DIR}/kmuddy )
+install( FILES  kmuddy-usock-client.pl kmuddy-usock-test.pl kmuddyvars.h locktest.c pre.c README testserver.cpp tmpserver.pl vartest.c DESTINATION ${KDE_INSTALL_DATADIR}/kmuddy )
 
 
 
