--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -10,12 +10,12 @@ add_library(kmuddyplugintemplate MODULE ${kmuddyplugintemplate_PART_SRCS})
 
 target_link_libraries(kmuddyplugintemplate  KF5::KDELibs4Support KF5::Parts  kmuddycore )
 
-install(TARGETS kmuddyplugintemplate DESTINATION ${PLUGIN_INSTALL_DIR} )
+install(TARGETS kmuddyplugintemplate DESTINATION ${KDE_INSTALL_PLUGINDIR} )
 
 
 ########### install files ###############
 
-install( FILES  kmuddyplugintemplate.desktop DESTINATION ${SERVICES_INSTALL_DIR} )
+install( FILES  kmuddyplugintemplate.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR} )
 
 
 
