--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -59,12 +59,12 @@ add_library(kmuddycore SHARED ${kmuddycore_LIB_SRCS})
 target_link_libraries(kmuddycore KF5::KCMUtils KF5::I18n KF5::Service KF5::KDELibs4Support Qt5::Script Qt5::Multimedia)
 
 set_target_properties(kmuddycore PROPERTIES VERSION 2.0.0 SOVERSION 2 )
-install(TARGETS kmuddycore DESTINATION ${LIB_INSTALL_DIR} )
+install(TARGETS kmuddycore DESTINATION ${KDE_INSTALL_LIBDIR} )
 
 
 ########### install files ###############
 
-install( FILES  kmuddyplugin.desktop DESTINATION ${SERVICETYPES_INSTALL_DIR} )
-install( FILES cplugin.h arith-exp.h cactionbase.h cactionmanager.h calias.h caliaslist.h cansiparser.h ccmdparser.h ccmdprocessor.h ccmdqueue.h cconsole.h cdownloader.h cexpresolver.h cinputline.h cmacromanager.h cmsp.h coutput.h cprompt.h csoundplayer.h cstatus.h ctextchunk.h cvalue.h cvariable.h cvariablelist.h cmenumanager.h cdialoglist.h cglobalsettings.h clistobject.h clist.h cpattern.h clistgroup.h clistmanager.h clistviewer.h clisteditor.h clistgroupeditor.h cprofilesettings.h cprofilemanager.h ctabwidget.h DESTINATION ${INCLUDE_INSTALL_DIR}/kmuddy )
+install( FILES  kmuddyplugin.desktop DESTINATION ${KDE_INSTALL_KSERVICETYPES5DIR} )
+install( FILES cplugin.h arith-exp.h cactionbase.h cactionmanager.h calias.h caliaslist.h cansiparser.h ccmdparser.h ccmdprocessor.h ccmdqueue.h cconsole.h cdownloader.h cexpresolver.h cinputline.h cmacromanager.h cmsp.h coutput.h cprompt.h csoundplayer.h cstatus.h ctextchunk.h cvalue.h cvariable.h cvariablelist.h cmenumanager.h cdialoglist.h cglobalsettings.h clistobject.h clist.h cpattern.h clistgroup.h clistmanager.h clistviewer.h clisteditor.h clistgroupeditor.h cprofilesettings.h cprofilemanager.h ctabwidget.h DESTINATION ${KDE_INSTALL_INCLUDEDIR}/kmuddy )
 
 
