--- a/plugins/varviewer/CMakeLists.txt
+++ b/plugins/varviewer/CMakeLists.txt
@@ -13,11 +13,11 @@ add_library(kmuddyvarviewerplugin MODULE ${kmuddyvarviewerplugin_PART_SRCS})
 
 target_link_libraries(kmuddyvarviewerplugin  KF5::KDELibs4Support KF5::Parts  kmuddycore )
 
-install(TARGETS kmuddyvarviewerplugin DESTINATION ${PLUGIN_INSTALL_DIR} )
+install(TARGETS kmuddyvarviewerplugin DESTINATION ${KDE_INSTALL_PLUGINDIR} )
 
 
 ########### install files ###############
 
-install( FILES  kmuddyvarviewerplugin.desktop DESTINATION ${SERVICES_INSTALL_DIR} )
+install( FILES  kmuddyvarviewerplugin.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR} )
 
 
