More porting away from kde4support.

--- a/kmuddy/CMakeLists.txt
+++ b/kmuddy/CMakeLists.txt
@@ -22,8 +22,6 @@ set(kmuddy_SRCS
    cconnection.cpp 
    csession.cpp 
    ctelnet.cpp 
-   kmuddy.cpp 
-   main.cpp 
    ctrigger.cpp 
    ctriggerlist.cpp
    ctriggereditor.cpp
@@ -45,11 +43,13 @@ set(kmuddy_SRCS
    cbuttonlist.cpp
    cbuttoneditor.cpp
    cscriptapi.cpp
+   kmuddy.cpp 
+   main.cpp 
 )
 
 add_executable(kmuddy ${kmuddy_SRCS})
 
-set (KMUDDY_LIBRARIES kmuddycore dialogs KF5::I18n KF5::IconThemes z )
+set (KMUDDY_LIBRARIES kmuddycore dialogs KF5::I18n KF5::TextWidgets KF5::XmlGui KF5::IconThemes z )
 if (MXP_FOUND)
   set (KMUDDY_LIBRARIES ${KMUDDY_LIBRARIES} ${MXP_LIBRARIES})
 endif (MXP_FOUND)
