--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include(FeatureSummary)
 include(ECMInstallIcons)
 
 find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets Script Multimedia)
-find_package(KF5 REQUIRED COMPONENTS Config CoreAddons WidgetsAddons I18n KIO KDELibs4Support KCMUtils XmlGui Parts Service IconThemes Archive)
+find_package(KF5 REQUIRED COMPONENTS Config CoreAddons WidgetsAddons I18n KIO KCMUtils TextWidgets XmlGui Service IconThemes Archive)
 
 find_package(MXP)
 if (MXP_FOUND)
@@ -44,8 +44,6 @@ add_subdirectory( scripting )
 
 
 ########### install files ###############
-
-install ( FILES muds.xml DESTINATION ${KDE_INSTALL_DATADIR}/kmuddy )
 
 ki18n_install(po)
 
