--- a/kmuddy/dialogs/CMakeLists.txt
+++ b/kmuddy/dialogs/CMakeLists.txt
@@ -29,5 +29,5 @@ set(dialogs_LIB_SRCS
 
 add_library(dialogs STATIC ${dialogs_LIB_SRCS})
 
-target_link_libraries(dialogs KF5::I18n Qt5::Widgets KF5::WidgetsAddons)
+target_link_libraries(dialogs KF5::I18n KF5::XmlGui Qt5::Widgets KF5::TextWidgets KF5::WidgetsAddons)
 
