--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -8,7 +8,7 @@ set(kmuddyplugintemplate_PART_SRCS plugin_template.cpp )
 
 add_library(kmuddyplugintemplate MODULE ${kmuddyplugintemplate_PART_SRCS})
 
-target_link_libraries(kmuddyplugintemplate  KF5::KDELibs4Support KF5::Parts  kmuddycore )
+target_link_libraries(kmuddyplugintemplate kmuddycore )
 
 install(TARGETS kmuddyplugintemplate DESTINATION ${KDE_INSTALL_PLUGINDIR} )
 
