Start porting plugins

--- a/plugins/converter/CMakeLists.txt
+++ b/plugins/converter/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/libs ${CMAKE_CURRENT_BINARY_DIR}    )
 
 ########### next target ###############
 
-set(kmuddyconverterplugin_PART_SRCS
+set(kmuddyconverterplugin_SRCS
     converterplugin.cpp
     converterdialog.cpp
     cgenericitem.cpp
@@ -25,14 +25,13 @@ set(kmuddyconverterplugin_PART_SRCS
     cvartrigger.cpp
     )
 
-add_library(kmuddyconverterplugin MODULE ${kmuddyconverterplugin_PART_SRCS})
 
-target_link_libraries(kmuddyconverterplugin  KF5::KDELibs4Support KF5::Parts  kmuddycore )
+kcoreaddons_add_plugin(kmuddyconverterplugin
+SOURCES
+${kmuddyconverterplugin_SRCS}
+INSTALL_NAMESPACE
+    "kmuddy"
+)
 
-install(TARGETS kmuddyconverterplugin DESTINATION ${KDE_INSTALL_PLUGINDIR} )
-
-
-########### install files ###############
-
-install( FILES  kmuddyconverterplugin.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR} )
+target_link_libraries(kmuddyconverterplugin KF5::CoreAddons kmuddycore )
 
