--- a/plugins/varviewer/CMakeLists.txt
+++ b/plugins/varviewer/CMakeLists.txt
@@ -4,20 +4,17 @@ include_directories( ${CMAKE_SOURCE_DIR}/libs ${CMAKE_CURRENT_BINARY_DIR}    )
 
 ########### next target ###############
 
-set(kmuddyvarviewerplugin_PART_SRCS
+set(kmuddyvarviewerplugin_SRCS
   varviewerplugin.cpp
   dlgvarviewer.cpp
 )
 
-add_library(kmuddyvarviewerplugin MODULE ${kmuddyvarviewerplugin_PART_SRCS})
+kcoreaddons_add_plugin(kmuddyvarviewerplugin
+SOURCES
+${kmuddyvarviewerplugin_SRCS}
+INSTALL_NAMESPACE
+    "kmuddy"
+)
 
-target_link_libraries(kmuddyvarviewerplugin  KF5::KDELibs4Support KF5::Parts  kmuddycore )
-
-install(TARGETS kmuddyvarviewerplugin DESTINATION ${KDE_INSTALL_PLUGINDIR} )
-
-
-########### install files ###############
-
-install( FILES  kmuddyvarviewerplugin.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR} )
-
+target_link_libraries(kmuddyvarviewerplugin KF5::CoreAddons kmuddycore )
 
