Enforce passing tests

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -17,3 +17,6 @@ Dependencies:
     'frameworks/kiconthemes': '@stable'
     'frameworks/karchive': '@stable'
     'frameworks/knotifications': '@stable'
+
+Options:
+  require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
