--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -55,7 +55,7 @@ set(kmuddycore_LIB_SRCS
 
 add_library(kmuddycore SHARED ${kmuddycore_LIB_SRCS})
 
-target_link_libraries(kmuddycore KF5::KCMUtils KF5::CoreAddons KF5::I18n KF5::TextWidgets KF5::XmlGui KF5::KIOCore KF5::Completion Qt5::Script Qt5::Multimedia)
+target_link_libraries(kmuddycore KF6::KCMUtils KF6::CoreAddons KF6::I18n KF6::TextWidgets KF6::XmlGui KF6::KIOCore KF6::Completion Qt6::Qml Qt6::Multimedia)
 
 set_target_properties(kmuddycore PROPERTIES VERSION 2.0.0 SOVERSION 2 )
 install(TARGETS kmuddycore DESTINATION ${KDE_INSTALL_LIBDIR} )
@@ -63,7 +63,7 @@ install(TARGETS kmuddycore DESTINATION ${KDE_INSTALL_LIBDIR} )
 
 ########### install files ###############
 
-install( FILES  kmuddyplugin.desktop DESTINATION ${KDE_INSTALL_KSERVICETYPES5DIR} )
+install( FILES  kmuddyplugin.desktop DESTINATION ${KDE_INSTALL_KSERVICETYPES6DIR} )
 install( FILES cplugin.h arith-exp.h cactionbase.h cactionmanager.h calias.h caliaslist.h cansiparser.h ccmdparser.h ccmdprocessor.h ccmdqueue.h cconsole.h cdownloader.h cexpresolver.h cinputline.h cmacromanager.h cmsp.h coutput.h cprompt.h csoundplayer.h cstatus.h ctextchunk.h cvalue.h cvariable.h cvariablelist.h cmenumanager.h cdialoglist.h cglobalsettings.h clistobject.h clist.h cpattern.h clistgroup.h clistmanager.h clistviewer.h clisteditor.h clistgroupeditor.h cprofilesettings.h cprofilemanager.h ctabwidget.h DESTINATION ${KDE_INSTALL_INCLUDEDIR}/kmuddy )
 
 
