--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,25 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(kmuddy)
+set(KMUDDY_VERSION "1.1")
 
-find_package(ECM REQUIRED CONFIG)
+project(kmuddy VERSION ${KMUDDY_VERSION})
+
+#set(QT_MAJOR_VERSION "6")
+set(QT_MIN_VERSION "6.6.0")
+set(KF6_MIN_VERSION "6.0.0")
+
+find_package(ECM ${KF6_MIN_VERSION} REQUIRED CONFIG)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${ECM_MODULE_PATH})
+set(CMAKE_CXX_STANDARD 17)
 
-set(QT_MAJOR_VERSION "6")
-
-include(KDEInstallDirs6)
+include(KDEInstallDirs)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 include(KDECMakeSettings)
 include(FeatureSummary)
 include(ECMInstallIcons)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Qml Multimedia)
-find_package(KF6 REQUIRED COMPONENTS Config CoreAddons WidgetsAddons I18n KIO KCMUtils TextWidgets XmlGui Service IconThemes Archive Notifications)
+find_package(Qt6 ${QT_MIN_VERSION} REQUIRED COMPONENTS Core Gui Widgets Qml Multimedia)
+find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS Config CoreAddons WidgetsAddons I18n KIO KCMUtils TextWidgets XmlGui Service IconThemes Archive Codecs Notifications)
 
 find_package(MXP)
 if (MXP_FOUND)
@@ -27,9 +32,12 @@ endif (MXP_FOUND)
 configure_file(config-mxp.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-mxp.h )
 
 #set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
-#set(CMAKE_VERBOSE_MAKEFILE ON)
 
-add_definitions(${QT_DEFINITIONS})
+# I have no idea what causes these to be defined. But they are breaking things all over the place.
+remove_definitions(
+  -DQT_NO_KEYWORDS
+  -DQT_NO_CAST_FROM_ASCII
+)
 
 # for config-*.h files
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
