--- a/plugins/strings/CMakeLists.txt
+++ b/plugins/strings/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-include_directories( ${CMAKE_SOURCE_DIR}/libs    )
+include_directories( ${CMAKE_SOURCE_DIR}/libs ${CMAKE_CURRENT_BINARY_DIR}   )
 
 
 ########### next target ###############
