--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -4,19 +4,20 @@
 Dependencies:
 - 'on': ['@all']
   'require':
-    'frameworks/extra-cmake-modules': '@stable'
-    'frameworks/kcoreaddons': '@stable'
-    'frameworks/kconfig': '@stable'
-    'frameworks/kwidgetsaddons': '@stable'
-    'frameworks/ki18n': '@stable'
-    'frameworks/kio': '@stable'
-    'frameworks/kcmutils': '@stable'
-    'frameworks/ktextwidgets': '@stable'
-    'frameworks/kxmlgui': '@stable'
-    'frameworks/kservice': '@stable'
-    'frameworks/kiconthemes': '@stable'
-    'frameworks/karchive': '@stable'
-    'frameworks/knotifications': '@stable'
+    'frameworks/extra-cmake-modules': '@stable-kf6'
+    'frameworks/kcoreaddons': '@stable-kf6'
+    'frameworks/kconfig': '@stable-kf6'
+    'frameworks/kwidgetsaddons': '@stable-kf6'
+    'frameworks/ki18n': '@stable-kf6'
+    'frameworks/kio': '@stable-kf6'
+    'frameworks/kcmutils': '@stable-kf6'
+    'frameworks/ktextwidgets': '@stable-kf6'
+    'frameworks/kxmlgui': '@stable-kf6'
+    'frameworks/kservice': '@stable-kf6'
+    'frameworks/kiconthemes': '@stable-kf6'
+    'frameworks/karchive': '@stable-kf6'
+    'frameworks/knotifications': '@stable-kf6'
+    'frameworks/kstatusnotifieritem': '@stable-kf6'
 
 Options:
   require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
